@@ -224,24 +224,15 @@ function Display({
     <div className="outer-container">
 
      
-      
-     
-
+  
       <h3 className="title">Wiki Speed Typing</h3>
-      
-   {/*    <div className="main-square-login" style={{display: "none"}}>
-
-      <div style={{display: "none"}}>
-        <Login />
-      </div>
-      <div style={{display: "none"}}>
-     <Register/>
-
-      </div>
-      </div> */}
 
       <div className="main-square" >
-        <AuthenticationUI/>
+
+
+        <AuthenticationUI
+          toggleStats={toggleStats}
+        />
 
         <UpperUI
           toggleHints={toggleHints}
