@@ -87,6 +87,10 @@ DONE 9. moreHints DONE
 DONE 11. currentStats: change to by default showing stats for current timer value? DONE
 12. app-title: move left/up?
 13. confirmation for stats reset
+14. implement trasition effect to all button?
+15. authentication UI upper padding?
+16. title not visible is app is minimized.
+
 
 
 
